
          zope.i18nmessageid.Message{Factory}

        instead of

          zope.i18nmessageid.MessageID{Factory}

        and

          zope.app.i18n.ZopeMessageFactory

        instead of

          zope.app.i18n.ZopeMessageIDFactory

        Zope itself now uses immutable messages everywhere.

        See zope/i18nmessageid/messages.txt for more information.


    Bug Fixes

      - Fixed bugs 468 and 443: Invalid escaping of xml/html data on ZPT pages
        and text/* files.

      - Fixed a bug in adapter registrations that caused errors and
        lookup failures when specifications had multiple base
        specifications.

      - Made OrderedContainer.updateOrder send an IContainerModifiedEvent.

      - Fixed bug 451, http://www.zope.org/Collectors/Zope3-dev/451
        Invoke widget factories adequately. Deprecate 
        CustomSequenceWidgetFactory because it does not satisfy IViewFactory.

      - zope.tales.expressions.simpleTraverse would raise NameError if the
        object at hand did not implement __getitem__. Changed to raise
        AttributeError instead. AttributeError is included in Undefs whereas
        NameError is not.

      - Fixed bug 405, http://www.zope.org/Collectors/Zope3-dev/405
        Needed check for common bug when calling apply on field indexes.

      - Fixed bug 402, http://www.zope.org/Collectors/Zope3-dev/402
        classImplements after classImplementsOnly lost the interfaces
        declated in classImplementsOnly.

      - Fixed bug 396, http://www.zope.org/Collectors/Zope3-dev/396.
        When doing multi-adapter lookups, the interface of the first
        object wan't given adequate weight.

      - Fix: OnlineHelp source files and textual resources now
        use UTF-8 as default encoding.

      - Fixed issue #455: tal:content="" does not get translated
        by i18n:translate=""

      - Fixed issue #390: Deprecated ``IBaseRequest.body`` and