@@ -162,6 +162,10 @@ Zope Changes
 
     Bug Fixes
 
+      - Fixed bug 485: ServerControlForm.html / Restart, Shutdown does not
+        work. This uses twisted's reactor now, implements the countdown
+        feature and provides sensible user feedback with a real page.
+
       - Fixed bugs 468 and 443: Invalid escaping of xml/html data on ZPT pages
         and text/* files.
 
